go to test button mobile issue fixed

--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -70,6 +70,9 @@
     }
 
     @media only screen and (max-width:1080px){
+        min-width: 360px;
+    }
+    @media screen and (max-width:360px) {
         min-width: 250px;
     }
 }
@@ -97,6 +100,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 4;
 
     @media screen and (max-width:768px) {
         width: 80%;
